2024-01-12T08:19:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7499606999 # 16
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 5 2216
* notice: prev accum: outdated-unq outdated-all / unq all: 1865 179760 / 1887 181928
* notice: next accum: outdated-unq outdated-all / unq all: 1865 179760 / 1889 182040
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -40 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-12-29 2024-01-12]

2024-01-12T01:10:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7496571462 # 15
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
* notice: last 14d: unq all: 5 2144
* notice: prev accum: outdated-unq outdated-all / unq all: 1864 179632 / 1887 181832
* notice: next accum: outdated-unq outdated-all / unq all: 1865 179760 / 1887 181928
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -24 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-12-28] / [2023-12-29 2024-01-11]

2024-01-11T16:20:27Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7491558402 # 14
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
* notice: last 14d: unq all: 5 2095
* notice: prev accum: outdated-unq outdated-all / unq all: 1864 179632 / 1887 181740
* notice: next accum: outdated-unq outdated-all / unq all: 1864 179632 / 1887 181832
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -41 / +2 +204 -0 -0 / 2 204
* notice: removed / changed dates: [] / [2023-12-28 2024-01-11]

2024-01-11T08:19:50Z: