@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-12T08:19:52Z",
+  "timestamp" : "2024-01-12T16:19:53Z",
   "count_outdated" : 179760,
   "uniques_outdated" : 1865,
-  "count" : 182040,
-  "uniques" : 1889,
+  "count" : 182133,
+  "uniques" : 1890,
   "clones" : [
     {
       "timestamp": "2023-12-29T00:00:00Z",
-      "count": 65,
-      "count_minmax": [ 65, 129 ],
-      "count_decinc": [ 64, 129 ],
+      "count": 23,
+      "count_minmax": [ 23, 129 ],
+      "count_decinc": [ 106, 129 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2024-01-12T00:00:00Z",
-      "count": 112,
-      "count_minmax": [ 112, 112 ],
-      "count_decinc": [ 0, 112 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 205,
+      "count_minmax": [ 112, 205 ],
+      "count_decinc": [ 0, 205 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
