@@ -1,3 +1,12 @@
+2024-01-12T16:19:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7504713089 # 17
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
+* notice: last 14d: unq all: 6 2267
+* notice: prev accum: outdated-unq outdated-all / unq all: 1865 179760 / 1889 182040
+* notice: next accum: outdated-unq outdated-all / unq all: 1865 179760 / 1890 182133
+* notice: prev exec diff / last date diff / accum: unq all: +1 +93 -0 -42 / +3 +205 -0 -0 / 3 205
+* notice: removed / changed dates: [] / [2023-12-29 2024-01-12]
+
 2024-01-12T08:19:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7499606999 # 16
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-12
